--- a/theme.css
+++ b/theme.css
@@ -4,6 +4,7 @@
  
 /* IMPORT CSS FROM GITHUB */
 @import url(https://cdn.rawgit.com/Zerthox/ClearVision/8c773772/css/ClearVision_v5.min.css);
+@import url(https://gitcdn.xyz/cdn/Zerthox/ClearVision/master/mods/SmoothBackgrounds.css);
  
 /*
 ---------------------------------------------------------------------------------------------------------------------------------------------
