--- a/theme-fixes.css
+++ b/theme-fixes.css
@@ -1,6 +1,6 @@
 /*Theme Fixes*/
  
-.container-2lgZY8, .container-PNkimc, .container-2Thooq, .theme-dark .members-1998pB  {
+.container-2lgZY8 {
     background-color: transparent;
 }
 
