--- a/theme-fixes.css
+++ b/theme-fixes.css
@@ -1,7 +1,7 @@
 /*Theme Fixes*/
  
 .container-2lgZY8 {
-    background-color: transparent;
+    background: transparent !important;
 }
 
 .theme-dark .member-3W1lQa:hover .content-OzHfo4 {
