--- a/theme-fixes.css
+++ b/theme-fixes.css
@@ -1,7 +1,12 @@
 /*Theme Fixes*/
  
-.container-2lgZY8 {
-    background: transparent !important;
+.container-2lgZY8,
+.container-PNkimc, 
+.container-2Thooq, 
+.theme-dark .members-1998pB, 
+.theme-dark .layer-3QrUeG, .theme-dark .layers-3iHuyZ,
+typing-2GQL18 {
+    background-color: transparent;
 }
 
 .theme-dark .member-3W1lQa:hover .content-OzHfo4 {
