--- a/theme-fixes.css
+++ b/theme-fixes.css
@@ -5,7 +5,7 @@
 .container-2Thooq, 
 .theme-dark .members-1998pB, 
 .theme-dark .layer-3QrUeG, .theme-dark .layers-3iHuyZ,
-typing-2GQL18 {
+.typing-2GQL18 {
     background-color: transparent;
 }
 
@@ -13,7 +13,7 @@ typing-2GQL18 {
     background-color: var(--main-color);
 }
 
-contentHoveredText-2D9B-x {
+.contentHoveredText-2D9B-x {
 	background-color: rgba(0,0,0,0.3)
 }
  
