--- a/theme-fixes.css
+++ b/theme-fixes.css
@@ -6,7 +6,7 @@
 .theme-dark .members-1998pB, 
 .theme-dark .layer-3QrUeG, .theme-dark .layers-3iHuyZ,
 .typing-2GQL18 {
-    background-color: transparent;
+    background-color: transparent !important;
 }
 
 .contentSelectedText-3wUhMi, .unread-1Dp-OI {
@@ -14,7 +14,7 @@
 }
 
 .contentHoveredText-2D9B-x {
-	background-color: rgba(0,0,0,0.3)
+	background-color: rgba(0,0,0,0.3) !important;
 }
  
 .theme-dark .embedInner-t4ag7g {
