--- a/theme-fixes.css
+++ b/theme-fixes.css
@@ -14,7 +14,15 @@
 }
 
 .contentHoveredText-2D9B-x {
-	background-color: rgba(0,0,0,0.3) !important;
+	background-color: rgba(0,0,0,0.7) !important;
+}
+
+.contextMenu-HLZMG {
+	background: rgba(0,0,0,0.7);
+}
+
+.theme-dark .member-3W1lQa:hover .content-OzHfo4 {
+	background: rgba(0,0,0,0.7);
 }
  
 .theme-dark .embedInner-t4ag7g {
