--- a/theme-fixes.css
+++ b/theme-fixes.css
@@ -18,11 +18,11 @@
 }
 
 .contextMenu-HLZMG {
-	background: rgba(0,0,0,0.7);
+	background: rgba(0,0,0,0.7)!important;
 }
 
 .theme-dark .member-3W1lQa:hover .content-OzHfo4 {
-	background: rgba(0,0,0,0.7);
+	background: rgba(0,0,0,0.7)!important;
 }
  
 .theme-dark .embedInner-t4ag7g {
