--- a/theme-fixes.css
+++ b/theme-fixes.css
@@ -33,14 +33,14 @@
 	background: rgba(0,0,0,.3);
 }
  
-.theme-dark .embedInner-t4ag7g {
+.theme-dark .embedInner-1-fpTo {
     background-color: rgba(34,34,34,.2);
     border-color: rgb(70,70,70);
     border-left: none;
 }
  
  
-.embedPill-3sYS1X {
+.embedPill-1Zntps {
     background-color: var(--main-color) !important;
 }
  
@@ -51,8 +51,8 @@
 .emoji {
     margin: 0 !important
 }
- 
-.membersGroup-3_dP5E {
+
+.membersGroup-v9BXpm {
     color: var(--main-color) !important;
     background: rgba(0,0,0,.5);
     text-align: center;
@@ -65,6 +65,10 @@
  
 .message-group-blocked {
     display: none;
+}
+
+.activityText-sLG0UL {
+	color: var(--main-color);
 }
 
 
