--- a/theme-fixes.css
+++ b/theme-fixes.css
@@ -1,11 +1,7 @@
 /*Theme Fixes*/
  
-.container-2lgZY8,
-.container-PNkimc, 
-.container-2Thooq, 
-.theme-dark .members-1998pB, 
-.theme-dark .layer-3QrUeG, .theme-dark .layers-3iHuyZ,
-.typing-2GQL18 {
+.container-2lgZY8, /*The base of the theme*/
+ {
     background-color: transparent !important;
 }
 
