--- a/theme-fixes.css
+++ b/theme-fixes.css
@@ -5,8 +5,7 @@
 .container-2Thooq, 
 .theme-dark .members-1998pB, 
 .theme-dark .layer-3QrUeG, .theme-dark .layers-3iHuyZ,
-.typing-2GQL18,
-.channels-Ie2l6A {
+.typing-2GQL18 {
     background-color: transparent !important;
 }
 
