--- a/theme-fixes.css
+++ b/theme-fixes.css
@@ -30,6 +30,7 @@
 
 .theme-dark .body-3ND3kc { /*Userinfo*/
     background-color: rgba(0, 0, 0, 0.65);
+}
 	
 .theme-dark .quickMessage-1yeL4E {
 	background-color: transparent;
