--- a/theme-fixes.css
+++ b/theme-fixes.css
@@ -3,7 +3,7 @@
 .container-2lgZY8, /*base*/
 .channels-Ie2l6A, /*channels*/
 .container-PNkimc,
-container-2Thooq,
+.container-2Thooq,
 .theme-dark .members-1998pB, /*member list*/
 .theme-dark .layer-3QrUeG, .theme-dark .layers-3iHuyZ, /*server list and messages*/
 .typing-2GQL18 {
