--- a/theme-fixes.css
+++ b/theme-fixes.css
@@ -30,7 +30,7 @@
 
 /*------*/
 
-.lookInverted-2D7oAl.colorBrand-3pXr91 {
+button.actionButton-3W1xZa.button-38aScr.lookInverted-2D7oAl.colorBrand-3pXr91.sizeSmall-2cSMqn.grow-q77ONN {
 	background-color: #43b581;
 	color: #fff;
 }
