--- a/theme-fixes.css
+++ b/theme-fixes.css
@@ -1,5 +1,9 @@
 [class*="theme-"] .member-3W1lQa.popout-open .content-OzHfo4 {
-	background-color: rgba(0,0,0,.8)
+	background-color: rgba(0,0,0,.7)
+}
+
+.role-2irmRk {
+	border-radius: 7px;
 }
 
 /*Emoji box*/
