--- a/theme.css
+++ b/theme.css
@@ -3,7 +3,7 @@
 /* Based on "Discord Reborn v4.30" by @Omniscient & "DarkMatter" by @Hammock */
  
 /* IMPORT CSS FROM GITHUB */
-@import url(https://cdn.rawgit.com/Zerthox/ClearVision/8c773772/css/ClearVision_v5.min.css);
+@import url(https://zerthox.github.io/ClearVision/css/ClearVision_v5.min.css);
 @import url(https://gitcdn.xyz/cdn/Zerthox/ClearVision/master/mods/SmoothBackgrounds.css);
  
 /*
