--- a/Other-Stuff/Karins_Modded_ClearVision_Snow.theme.css
+++ b/Other-Stuff/Karins_Modded_ClearVision_Snow.theme.css
@@ -1,6 +1,6 @@
 //META{"name":"Karin's_Modded_ClearVision_Snow","description":"ClearVision_Sapphire with custom colors and backgrounds modded by Karin","author":"Zerthox/Karin:Modded","version":"5"}*//{}
 @import url(https://zerthox.github.io/ClearVision/css/ClearVision_v5.min.css);
-@import url(https://zerthox.github.io/ClearVision/mods/CleanStatusPicker.css;
+@import url(https://zerthox.github.io/ClearVision/mods/CleanStatusPicker.css);
 @import url(https://zerthox.github.io/ClearVision/mods/SmoothBackgrounds.css);
 @import url(https://zerthox.github.io/ClearVision/mods/ContrastImprovements.css);
 
