--- a/theme-fixes.css
+++ b/theme-fixes.css
@@ -1,4 +1,4 @@
-.container-2lgZY8, .container-PNkimc, .theme-dark .members-1998pB, .theme-dark .layer-3QrUeG, .theme-dark .layers-3iHuyZ, rgba(0, 0, 0, 0.7) {
+.container-2lgZY8, .container-PNkimc, .theme-dark .members-1998pB, .theme-dark .layer-3QrUeG, .theme-dark .layers-3iHuyZ,  {
 	background-color: transparent;
 }
 
