--- a/theme-fixes.css
+++ b/theme-fixes.css
@@ -1,6 +1,6 @@
 .container-2lgZY8, .container-PNkimc, .theme-dark .members-1998pB, .theme-dark .layer-3QrUeG, .theme-dark .layers-3iHuyZ,
 .theme-dark .chat-3bRxxu, .theme-dark .chat-3bRxxu form, .theme-dark .content-yTz4x3, .theme-dark .messagesWrapper-3lZDfY  {
-	background-color: transparent !important;
+	background-color: transparent;
 }
 
 .theme-dark .messagesWrapper-3lZDfY {
