--- a/theme-fixes.css
+++ b/theme-fixes.css
@@ -1,10 +1,10 @@
 .container-2lgZY8, .container-PNkimc, .theme-dark .members-1998pB, .theme-dark .layer-3QrUeG, .theme-dark .layers-3iHuyZ,
 .theme-dark .chat-3bRxxu, .theme-dark .chat-3bRxxu form, .theme-dark .content-yTz4x3, .theme-dark .messagesWrapper-3lZDfY  {
-	background-color: transparent;
+	background-color: transparent !important;
 }
 
 .theme-dark .messagesWrapper-3lZDfY {
-	padding-top: 0px;
+	padding-top: 0px !important;
 }
 
 [class*="theme-"] .member-3W1lQa.popout-open .content-OzHfo4 {
