--- a/theme-fixes.css
+++ b/theme-fixes.css
@@ -3,7 +3,7 @@
 	background-color: transparent !important;
 }
 
-.theme-dark .messagesWrapper-3lZDfY {
+.channelTextArea-rNsIhG {
 	padding-top: 0px !important;
 }
 
