--- a/theme-fixes.css
+++ b/theme-fixes.css
@@ -1,3 +1,7 @@
+.container-2lgZY8, .container-PNkimc, .theme-dark .members-1998pB, .theme-dark .layer-3QrUeG, .theme-dark .layers-3iHuyZ,
+.theme-dark .chat-3bRxxu, .theme-dark .chat-3bRxxu form, .theme-dark .content-yTz4x3, .theme-dark .messagesWrapper-3lZDfY  {
+	background-color: transparent !important;
+}
 
 [class*="theme-"] .member-3W1lQa.popout-open .content-OzHfo4 {
 	background-color: rgba(0,0,0,.7)
