--- a/theme-fixes.css
+++ b/theme-fixes.css
@@ -11,7 +11,7 @@
 	text-align: center;
 }
 
-.nameCollapsed-34uFWo::before, .nameDefault-2DI02H::before, .nameHovered-1gxhWH::before, .nameHoveredCollapsed-2orEWB::before, .nameMuted-1MCOt4::before, .nameUnread-njOjIS::before
+.nameCollapsed-34uFWo::before, .nameDefault-2DI02H::before, .nameHovered-1gxhWH::before, .nameHoveredCollapsed-2orEWB::before, .nameMuted-1MCOt4::before, .nameUnread-njOjIS::before {
 	flex: 1;
     height: 1px;
     background: white;
