--- a/theme-fixes.css
+++ b/theme-fixes.css
@@ -6,6 +6,10 @@
 
 /*Channel group styles*/
 
+.containerDefault-3GGEv_ {
+    margin-bottom: 5px;
+}
+
 .nameCollapsed-34uFWo, .nameDefault-2DI02H, .nameHovered-1gxhWH, .nameHoveredCollapsed-2orEWB, .nameMuted-1MCOt4, .nameUnread-njOjIS {
 	display: flex;
 	text-align: center;
@@ -35,7 +39,7 @@
 
 .nameHovered-1gxhWH:before, .nameHoveredCollapsed-2orEWB:before,
 .nameHovered-1gxhWH:after, .nameHoveredCollapsed-2orEWB:after {
-	opacity: .5 !important;
+	opacity: .55 !important;
 }
 
 /*------*/
