--- a/theme-fixes.css
+++ b/theme-fixes.css
@@ -14,7 +14,7 @@
 	display: flex;
 	text-align: center;
 	font-weight: bold;
-	background: var(--main-color);
+	color: var(--main-color);
 }
 
 .nameCollapsed-34uFWo:before, .nameDefault-2DI02H:before, .nameHovered-1gxhWH:before, .nameHoveredCollapsed-2orEWB:before, .nameMuted-1MCOt4:before, .nameUnread-njOjIS:before,
@@ -36,7 +36,10 @@
     margin-left: 10px;
 }
 
-.nameHovered-1gxhWH, .nameHoveredCollapsed-2orEWB,
+.nameHovered-1gxhWH, .nameHoveredCollapsed-2orEWB {
+	color: var(--hover-color);
+}
+
 .nameHovered-1gxhWH:before, .nameHoveredCollapsed-2orEWB:before,
 .nameHovered-1gxhWH:after, .nameHoveredCollapsed-2orEWB:after {
 	background: var(--hover-color);
