--- a/theme-fixes.css
+++ b/theme-fixes.css
@@ -14,7 +14,7 @@
 	display: flex;
 	text-align: center;
 	font-weight: bold;
-	color: var(--main-color);
+	color: var(--main-color) !important;
 }
 
 .nameCollapsed-34uFWo:before, .nameDefault-2DI02H:before, .nameHovered-1gxhWH:before, .nameHoveredCollapsed-2orEWB:before, .nameMuted-1MCOt4:before, .nameUnread-njOjIS:before,
@@ -37,7 +37,7 @@
 }
 
 .nameHovered-1gxhWH, .nameHoveredCollapsed-2orEWB {
-	color: var(--hover-color);
+	color: var(--hover-color) !important;
 }
 
 .nameHovered-1gxhWH:before, .nameHoveredCollapsed-2orEWB:before,
