--- a/theme-fixes.css
+++ b/theme-fixes.css
@@ -137,7 +137,7 @@ div#magane a.button.is-danger[data-v-f057252c]:hover {
 }
 
 div.channel-textarea-stickers[data-v-f057252c] {
-	background-image:  url("/assets/a42df564f00ed8bbca652dc9345d3834.svg") !important;
+	background-image:  url("https://discordapp.com/assets/a42df564f00ed8bbca652dc9345d3834.svg") !important;
 	background-size: initial !important;
 	background-position: initial !important;
 }
