--- a/status-circles.css
+++ b/status-circles.css
@@ -3,6 +3,7 @@
  
 /* "Status Circles v1.7" by Zerthox */
 .theme-dark .status-2s6iDp,
+.theme-dark .status-oxiHuE,
 .private-channels .avatar-small .status,
 .account .avatar-small .status {
     width: 100% !important;
