--- a/theme-fixes.css
+++ b/theme-fixes.css
@@ -110,6 +110,7 @@ button.button-38aScr.lookFilled-1Gx00P.colorGreen-29iAKY.sizeMedium-1AC_Sl.grow-
 
 .theme-dark .installSize-1eXbBX {
     background-color: var(--main-color);
+}
 
 /*------*/
 
