--- a/theme-fixes.css
+++ b/theme-fixes.css
@@ -26,6 +26,10 @@
     margin-left: -1px;
 }
 
+.theme-dark .emojiAliasInput-1y-NBz .emojiInput-1aLNse {
+    background-color: transparent;
+}
+
 /* Manage Message */
 
 .theme-dark .container-3cGP6G {
